Basic HighCharts copied example

--- a/webServer/resources/index.html
+++ b/webServer/resources/index.html
@@ -23,8 +23,11 @@
     <!-- Google Icon Font -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <!--Chart JS Imports -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script>
+    <!--Highcharts Imports -->
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/series-label.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/export-data.js"></script>
 
     <!-- Index CSS -->
     <link rel="stylesheet" text="text/css" href="css/index.css" > </link>
@@ -40,8 +43,7 @@
           <div class="card hoverable">
             <div class="card-content">
                 <h3> Oscilloscope Plot </h3>
-                <canvas id="myChart"></canvas>                      
-                <button id="randomBtn" type="button" class="btn btn-primary waves-effect">Random</button>
+                <div id="containerPlot"></div>
             </div>
           </div> 
         </div>
