High charts able to update on button click

--- a/webServer/resources/index.html
+++ b/webServer/resources/index.html
@@ -44,6 +44,7 @@
             <div class="card-content">
                 <h3> Oscilloscope Plot </h3>
                 <div id="containerPlot"></div>
+                <a  id="generateBtn" class="waves-effect waves-light btn" style="color: white">Plot Data!</a>
             </div>
           </div> 
         </div>
