Able to plot data from sensor

--- a/webServer/resources/index.html
+++ b/webServer/resources/index.html
@@ -44,7 +44,11 @@
             <div class="card-content">
                 <h3> Oscilloscope Plot </h3>
                 <div id="containerPlot"></div>
-                <a  id="generateBtn" class="waves-effect waves-light btn" style="color: white">Plot Data!</a>
+                <h5 id="espstatus"></h5>
+                <div style="display:inline-block">
+                    <a  id="plotDataBtn" class="waves-effect waves-light btn" style="color: white">Plot Data</a>
+                    <a  id="generateBtn" class="waves-effect waves-light btn" style="color: white">Generate Data</a>                
+                </div>
             </div>
           </div> 
         </div>
