--- a/webServer/resources/index.html
+++ b/webServer/resources/index.html
@@ -33,6 +33,9 @@
     <link rel="stylesheet" text="text/css" href="css/index.css"> </link>
     <script src="js/site.js"></script>
 
+    <!-- Math Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/6.2.2/math.min.js"></script>
+
     <!-- JQuery Knob-->
     <script src="https://rawcdn.githack.com/aterrien/jQuery-Knob/755309e933d326ffaa5a2d758dc377147b766515/dist/jquery.knob.min.js"></script>
     <title>DSO Interface 2019</title>
@@ -52,11 +55,13 @@
                     <h5 id="espstatus"></h5>
                     <h6 id="contStatus"></h6>
                     <div style="display:inline-block">
-                        <a id="clearBtn" class="waves-effect waves-light btn" style="color: white">Clear Data</a>
-                        <a id="plotDataBtn" class="waves-effect waves-light btn" style="color: white">Plot Data</a>
-                        <a id="generateBtn" class="waves-effect waves-light btn" style="color: white">Continuous Mode</a>
-                        <a id="screenPlotBtn" class="waves-effect waves-light btn" style="color: white">Plot onto OLED!</a>
-                        <a id="generateRandData" class="waves-effect waves-light btn" style="color: white">Generate Data</a>
+                        <a id="generateRandData" class="waves-effect purple darken-3 waves-light btn" style="color: white">Generate Data</a>
+                        <a id="plotDataBtn" class="waves-effect purple darken-1 waves-light btn" style="color: white">Plot From DSO</a>
+                        <a id="generateBtn" class="waves-effect purple lighten-1 waves-light btn" style="color: white">Continuous Mode</a>
+                    </div>
+                    <div style="display:inline-block">
+                        <a id="screenPlotBtn" class="waves-effect blue darken-2 waves-light btn" style="color: white">Plot onto OLED!</a>
+                        <a id="clearBtn" class="waves-effect blue lighten-1 waves-light btn" style="color: white">Clear Data</a>
                     </div>
                 </div>
             </div>
@@ -72,7 +77,7 @@
                     <div id="fftPlotContainer"></div>
                     <h5 id="fftstatus"></h5>
                     <div style="display:inline-block">
-                        <a id="clearFFTBtn" class="waves-effect waves-light btn" style="color: white">Clear Freq</a>
+                        <a id="clearFFTBtn" class="waves-effect red darken-1 waves-light btn" style="color: white">Clear Freq</a>
                     </div>
                 </div>
             </div>
